# ethzasl_apriltag2

./: .gitignore  CMakeLists.txt
include/apriltags/: MathUtil.h
samples/: CMakeLists.txt  Demo.cc
src/: Edge.cc  TagDetector.cc
